# Project-Hub-Analyze

./: README.md  main.py  pyproject.toml  requirements.txt  run.py
docs/: Project-Hub-Analyze.drawio  project-hub-analayze.drawio
src/backend/: __init__.py  app.py
src/backend/auth/: __init__.py
src/backend/auth/database/: __init__.py
src/backend/auth/login/: __init__.py  login_router.py
src/backend/auth/register/: __init__.py  register_route.py  register_router.py
src/backend/auth/user_controller/: __init__.py  user_controller.py  user_exceptions.py
src/backend/auth/user_model/: __init__.py  user.py  user_exception.py
